2004-12-18  Alexandre Duret-Lutz  <adl@gnu.org>

	* doc/automake.texi (gettext): Move the paragraph about
	dist_list_LISP...
	(Emacs Lisp): ... here.
	Report from Bruno Haible.

	* doc/automake.texi: Bump GFDL version to 1.2, since that is
	what we distribute.

	* doc/automake.texi: Fix more misuses of @ref, @xref and @pxref,
	including some of the "corrections" below.  Thanks to Karl Berry.

	* doc/automake.texi: Correct several misuses of @xref and @pxref.

2004-12-17  Jim Meyering  <jim@meyering.net>

	* install-sh: Use `(exit N); exit N', not `(exit N); exit'.
	Otherwise, install-sh could exit with improper exit status when
	exiting via a trapped interrupt.  Thanks to a report from Bob Proulx.

2004-12-14  Akim Demaille  <akim@epita.fr>

	* doc/automake.texi (Options): Englishoes.
	(Options): And another.

2004-12-11  Alexandre Duret-Lutz  <adl@gnu.org>

	* doc/automake.texi (Per-Object Flags): New node.

2004-12-09  Alexandre Duret-Lutz  <adl@gnu.org>

	Fix PR automake/441:
	* lib/am/java.am (install-%DIR%JAVA, uninstall-%DIR%JAVA): Do
	not install *.class if "$(%DIR%_JAVA)" is empty.
	* tests/java3.test: New file.
	* tests/Makefile.am (TESTS): Add it.
	Report from Johannes Nicolai.

	* doc/automake.texi (Java): Mention dist_ and add an example.
	* tests/java.test: Do actually compile java files and run distcheck.

2004-12-08  Peter O'Gorman  <peter@pogma.com>
	    Alexandre Duret-Lutz  <adl@gnu.org>

	* lib/Automake/FileUtils.pm (dir_has_case_matching_file,
	reset_dir_cache): New functions.
	* automake.in (handle_dist, require_file_internal): Use them, so
	that CHANGELOG is not confused with ChangeLog on case-insensitive
	case-preserving file systems.
	* tests/hfs.test: New file.
	* tests/Makefile.am (TESTS): Add hfs.test.

2004-12-08  Paul Eggert  <eggert@cs.ucla.edu>

	* lib/mdate-sh: Don't use "set - x`$ls_command /`", as zsh mishandles
	the spaces inside $ls_command.  Problem reported by Loulou Pouchet in