@@ -1,5 +1,8 @@
 2004-12-18  Alexandre Duret-Lutz  <adl@gnu.org>
 
+	* lib/config-ml.in, lib/config.guess, lib/config.sub,
+	lib/texinfo.tex: New upstream versions.
+
 	* doc/automake.texi (gettext): Move the paragraph about
 	dist_list_LISP...
 	(Emacs Lisp): ... here.
